# ImmersedBoundary

./: .gitignore  CMakeLists.txt  README.md  deviceArrays  hello_thrust.cu  testRun
FortranTest/: CMakeLists.txt  main.f90
Tests/: test.cpp
dataFromYuri/: I saved data from MATLAB.txt
samples/: expectedResult.txt
shroud_project/: solverToFortran.json  solverToFortran.yaml  typesEigenBCGSolver.h  typeslibrary.h  typespoisson_gpu.h  utilEigenBCGSolver.cpp  utillibrary.cpp  utilpoisson_gpu.cpp  wrapEigenBCGSolver_ImEq.cpp  wrapEigenBCGSolver_ImEq.h  wrapEigenBCGSolver_eigen.cpp  wrapEigenBCGSolver_eigen.h  wrapFortranBindings.cpp  wrapFortranBindings.h  wrapfEigenBCGSolver_ImEq.f90  wrapfEigenBCGSolver_eigen.f90  wrapfeigenbcgsolver.f90  wrapffortranbindings.f  wrapffortranbindings.f90  wrapflibrary.f  wrapfpoisson_gpu.f
shroud_project_EigenSolver/: solverToFortran.yaml
shroud_project_ImEq/: solverToFortran.json  wrapFortranBindings.cpp  wrapffortranbindings.f90
src/: Algorithms  BiCGSTAB.cu  Event.h  FortranBindings.hpp  Mat.cu  PoissonFDM.cu  Singleton.cu  Vec.cu  algorithms.cu  deviceArray1D.cu  deviceArray2D.cu  deviceArrays  deviceArrays.cu  deviceArrays.h  main.cu  testMethods.cu
src/BiCGSTAB/: BiCGSTAB.cu  BiCGSTAB.cuh  Event.cu  RunDirectSolver.cu
src/Poisson/: CubeBoundary.cu  CubeBoundary.h  DirectSolver.cu  EigenDecompSolver.cu  EigenDecompSolver.h  FastDiagonalization.cu  FastDiagonalizationMethod.cu  FiniteDiffMethod.cu  FiniteDiffMethodPoisson.cu  FortranBindings.cu  GridDim.cpp  GridDim.h  Poisson.cu  Poisson.h
src/deviceArrays/: BandedMatrix.cu  KernelSupport.cuh  Mat.cu  Singleton.cu  SquareMat.cu  Vec.cu  deviceArraySupport.h  deviceArrays.cu  deviceArrays.h  handle.cu  streamHelper.cpp
src/deviceArrays/defFiles/: BandedMatrix.cu  DeviceData.cu  DeviceData.cuh  DeviceMemory.cpp  GpuArray.cu  GridDim.cu  KernelPrep.cu  Mat.cu  SimpleArray.cu  Singleton.cu  Sparse.cu  SparseCOO.cpp  SparseCSC.cu  SparseCSR.cpp  SparseMat.cu  SquareMat.cu  Streamable.cpp  Tensor.cu  Vec.cu  deviceArrays.cu  handle.cu  streamHelper.cpp
src/deviceArrays/headers/: BandedMat.h  DeviceData.cuh  DeviceMemory.h  GPUArray.h  GpuArray.h  GridDim.cuh  GridDim.h  GridDim.hpp  KernelSupport.cuh  Mat.h  SimpleArray.h  Singleton.h  SparseCOO.h  SparseCSC.cuh  SparseCSR.h  SparseMat.h  SquareMat.h  Streamable.h  Tensor.h  Vec.h  bandedMat.h  deviceArraySupport.h  deviceArrays.h  handle.h  singleton.h  squareMat.h  vec.h
src/deviceArrays/headers/Support/: GridDim.hpp  Streamable.h
src/deviceArrays/headers/sparse/: BandedMat.h  SparseCOO.h  SparseCSC.cuh  SparseCSR.h  SparseMat.h
src/immersedBoundary/: BaseData.cpp  BaseData.h  BaseDataOut.hpp  IBDataFactory.hpp  ImerssedEquation.cpp  ImerssedEquation.cu  ImerssedEquation.h  PPrimeFPrime.cu  PPrimeFPrime.cuh  YuriWork.cu
src/math/: Real3d.cpp  Real3d.h
src/poisson/: CubeBoundary.cu  DirectSolver.cu  PoissonRHS.cu  PoissonRHS.h  ToeplitzLaplacian.cu  ToeplitzLaplacian.cuh
src/solvers/: ADIThomas.cu  ADIThomas.cuh  BiCGSTAB.cu  BiCGSTAB.cuh  EigenDecompSolver.cu  EigenDecompSolver.h  Event.cu  Event.h  Thomas.cu  Thomas.cuh
src/solvers/EigenDecomp/: EigenDecomp2d.cu  EigenDecomp2d.h  EigenDecomp3d.cu  EigenDecomp3d.cuh  EigenDecompForFortran.cpp  EigenDecompForFortran.h  EigenDecompSolver.cu  EigenDecompSolver.h  EigenDecompThomas.cu  EigenDecompThomas.cuh
